# digital-ads-remote-mcp

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  generate-url.sh  pyproject.toml  remote_server.py  worker.py
mcp-security-reports/: facebook-ads-mcp-2025-12-02.md  google-ads-mcp-2025-11-25.md  google-analytics-mcp-2025-12-02.md
