[project]
name = "google-ads-mcp-remote"
version = "0.1.0"
requires-python = ">=3.10"
description = "Remote deployment wrapper for Google Ads MCP Server"
readme = "README.md"
license = "Apache-2.0"

dependencies = [
    "google-ads>=28.0.0",
    "mcp[cli]>=1.2.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.scripts]
google-ads-mcp-remote = "remote_server:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["remote_server", "worker"]
