[project]
name = "digital-ads-remote-mcp"
version = "0.1.0"
requires-python = ">=3.10"
description = "Remote deployment wrapper for digital ads MCP servers"
readme = "README.md"
license = "Apache-2.0"

dependencies = [
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "eciespy>=0.4.2",
]

[project.scripts]
digital-ads-remote-mcp = "remote_server:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["remote_server"]
